--- a/public/index.html
+++ b/public/index.html
@@ -67,12 +67,11 @@
 
             <div class="charts">
                 <div id="charts_silk_dead_recovered"> </div>
-                <div id="charts_situationInCity">
+                <div id="charts_situationInCity">              
                     <div id="chartTinyBarsituationInCity"> </div>
                     <div id="chartPiesituationInCity"> </div>
                 </div>
             </div>
-
         </div>
     </div> 
 
@@ -89,7 +88,7 @@
 
 
         
-        <div id="charts__vaccine"> </div> 
+        <div class="charts_vaccine"> </div> 
 
 
   </body>
