--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,10 @@
                     <div id="chartTinyBarsituationInCity"> </div>
                     <div id="chartPiesituationInCity"> </div>
                 </div>
+                <div class=charts__registerCasesAdeaths_byAgeSex></div>                
+                    <div id="charts__registerCasesAdeaths_byAgeWoman"> </div>
+                    <div id="charts__registerCasesAdeaths_byAgeMan"> </div>
+                </div>
             </div>
         </div>
     </div> 
