Made general statistics (completely layout) and configured flex for the map block and graphics (but strange flex by gender and age). Added header logo.

--- a/public/index.html
+++ b/public/index.html
@@ -14,44 +14,42 @@
   <body>
 
  <header class="header">
-            <div class="header__inner">
-                <div class="header__logoimages"><img src="images/logo.jpg" alt="Минздрав"  width="100px" height="100px" ></div> 
-                <div class="header__logo">COVID-19</div>
-                <div class="header__search">
-                    <input class="text-field__input" type="text" name="search" size="50" value="">
-                </div>
-                <div class="header__button"><a href="" class="btn btn1">Поиск</a></div>  
+        <div class="logo"> 
+            <object type="image/svg+xml" data="logo.svg"> 
+                <img src="logo.svg">
+            </object>                
+        </div>
     
-                <nav class="nav">
+        <div class="socialMedia"> 
                     <a class="nav__link" href="#"><img src="images/telegram.png" alt="telegram"  width="25px" height="25px"></a>
                     <a class="nav__link" href="#"><img src="images/facebook.png" alt="facebook"  width="25px" height="25px"></a>
                     <a class="nav__link" href="#"><img src="images/whatsapp.png" alt="whatsapp"  width="25px" height="25px"></a>
                     <a class="nav__link" href="#"><img src="images/instagram.png" alt="instagram"  width="25px" height="25px"></a>
-                </nav>
-            </div>
+
+        </div>
     </header>
 
     <div class="statics">        
             <div class="stat">
                 <div id=all>
-                    <h1 style="color: rgb(15, 44, 139);">617836</h1> 
-                    <h4 style="color: rgb(15, 44, 139);">Всего выявлено</h4>
+                    <h1>617836</h1> 
+                    <h4>Всего выявлено</h4>
                 </div>
                 <div id=healthy>
-                    <h1 style="color: rgb(32, 75, 69);">504008</h1> 
-                    <h4 style="color:rgb(32, 75, 69);">Всего выздоровело</h4>
+                    <h1>504008</h1> 
+                    <h4>Всего выздоровело</h4>
                 </div>
                 <div id=dead>
-                    <h1 style="color:rgb(133, 43, 28);">12069</h1> 
-                    <h4 style="color:rgb(133, 43, 28);">Всего умерло</h4>
+                    <h1>12069</h1> 
+                    <h4>Всего умерло</h4>
                 </div>
                 <div id=suspicious>
-                    <h1 style="color:rgb(180, 158, 34);" >97</h1> 
-                    <h4 style="color:rgb(180, 158, 34);" > Подозрительные случаи</h4>
+                    <h1>97</h1> 
+                    <h4> Подозрительные случаи</h4>
                 </div>
                 <div id=control>
-                    <h1 style="color:rgb(197, 125, 18);" >1050</h1> 
-                    <h4 style="color:rgb(197, 125, 18);" >Под наблюдением</h4>
+                    <h1>1050</h1> 
+                    <h4>Под наблюдением</h4>
                 </div>
             </div>
     </div>
