Fixed site logo (finish style), social network icons added in svg format (but styles not completed)

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,10 @@
         </div>
     
         <div class="socialMedia"> 
-                    <a class="nav__link" href="#"><img src="images/telegram.png" alt="telegram"  width="25px" height="25px"></a>
-                    <a class="nav__link" href="#"><img src="images/facebook.png" alt="facebook"  width="25px" height="25px"></a>
-                    <a class="nav__link" href="#"><img src="images/whatsapp.png" alt="whatsapp"  width="25px" height="25px"></a>
-                    <a class="nav__link" href="#"><img src="images/instagram.png" alt="instagram"  width="25px" height="25px"></a>
-
+            <object id ="facebook" type="image/svg+xml" data="socialLogo\facebook.svg"> <img src="socialLogo\facebook.svg"> </object>              
+            <object id ="instagram" type="image/svg+xml" data="socialLogo\instagram.svg"> <img src="socialLogo\instagram.svg"> </object>    
+            <object id ="telegram" type="image/svg+xml" data="socialLogo\telegram.svg"> <img src="socialLogo\telegram.svg"> </object>    
+            <object  id ="whatsapp" type="image/svg+xml" data="socialLogo\whatsapp.svg"> <img src="socialLogo\whatsapp.svg"> </object>      
         </div>
     </header>
 
