normal icons appeared on the site. When you clicked on the area on the map, a window appeared (the code was not made)

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,20 @@
         </div>
     </header>
 
+
+    <div class="MapContent">
+        <h4 id="titlu"></h4>
+        <div>
+            <h4 id="OperateDate"> Оперативные данные </h4>
+            <div class="contentDate">
+                <div id="silkR"> </div>
+                <div id="healthR"> </div>
+                <div id="deadR"> </div>
+            </div>
+        </div>
+
+    </div>
+
     <div class="statics">        
             <div class="stat">
                 <div id=all>
